--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -5,5 +5,7 @@
     <p class="comment_time"><%= time_ago_in_words(comment.created_at) %>Ago</p>
   </div>
 
+<% if user_signed_in? %>
   <p><%= link_to 'Delete', [comment.post, comment], method: :delete, class: "button", data: {comfirm: 'Are you sure?'} %>
+    <% end %>
 </div>
